force-app/main/default/objects/HMC_Price_Master__c/HMC_Price_Master__c.object-meta.xml
<CustomObject>
    <label>Price Master</label>
    <nameField>
        <displayFormat>Price-{00000}</displayFormat>
        <label>Price Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>