force-app/main/default/objects/HMC_Price_Master__c/fields/Attribute_Based_Pricing_ID__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Based_Pricing_ID__c</fullName>
    <label>Attribute-Based Pricing ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>