force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>HMC_Account_Code__c</fullName>
    <label>Account Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Table</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>