force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_Account_Selection__c.field-meta.xml
<CustomField>
    <fullName>HMC_Account_Selection__c</fullName>
    <label>Account Selection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>