force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_Amount_in_transaction_currency__c.field-meta.xml
<CustomField>
    <fullName>HMC_Amount_in_transaction_currency__c</fullName>
    <label>Dealer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>