force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_Color__c.field-meta.xml
<CustomField>
    <fullName>HMC_Color__c</fullName>
    <label>Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>