force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_Configuration__c.field-meta.xml
<CustomField>
    <fullName>HMC_Configuration__c</fullName>
    <label>Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>