force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_Currency_Type__c.field-meta.xml
<CustomField>
    <fullName>HMC_Currency_Type__c</fullName>
    <label>Currency Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>