force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>HMC_Dealer_Code__c</fullName>
    <label>Dealer Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>