force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>HMC_Discount_Percentage__c</fullName>
    <label>Discount Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>