force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_Find_Next__c.field-meta.xml
<CustomField>
    <fullName>HMC_Find_Next__c</fullName>
    <label>Find Next</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>