force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_Fixed_Amount__c.field-meta.xml
<CustomField>
    <fullName>HMC_Fixed_Amount__c</fullName>
    <label>Fixed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>