force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_From_Date__c.field-meta.xml
<CustomField>
    <fullName>HMC_From_Date__c</fullName>
    <label>From Date</label>
    <type>Date</type>
</CustomField>