force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_Item__c.field-meta.xml
<CustomField>
    <fullName>HMC_Item__c</fullName>
    <label>Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>