force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_Max_Retail_Price__c.field-meta.xml
<CustomField>
    <fullName>HMC_Max_Retail_Price__c</fullName>
    <label>Max. Retail Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>