force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_Price_unit__c.field-meta.xml
<CustomField>
    <fullName>HMC_Price_unit__c</fullName>
    <label>Price unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>