force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_Relation__c.field-meta.xml
<CustomField>
    <fullName>HMC_Relation__c</fullName>
    <label>Relation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price (sales)</fullName>
            </value>
            <value>
                <fullName>Line discount (Sales)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>