force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_Size__c.field-meta.xml
<CustomField>
    <fullName>HMC_Size__c</fullName>
    <label>Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>