force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_Source_Code__c.field-meta.xml
<CustomField>
    <fullName>HMC_Source_Code__c</fullName>
    <externalId>true</externalId>
    <label>Source Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>