force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_Style__c.field-meta.xml
<CustomField>
    <fullName>HMC_Style__c</fullName>
    <label>Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>