force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_To__c.field-meta.xml
<CustomField>
    <fullName>HMC_To__c</fullName>
    <label>To</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>