force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_To_Date__c.field-meta.xml
<CustomField>
    <fullName>HMC_To_Date__c</fullName>
    <label>To Date</label>
    <type>Date</type>
</CustomField>