force-app/main/default/objects/HMC_Price_Master__c/fields/HMC_Unit__c.field-meta.xml
<CustomField>
    <fullName>HMC_Unit__c</fullName>
    <label>Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>