force-app/main/default/objects/HMC_Price_Master__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>product2__c</referenceTo>
    <relationshipLabel>Price Masters</relationshipLabel>
    <relationshipName>Price_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>